# AutoTopo

./: .gitignore  README.md  pyproject.toml  test_riesz.py
config/: settings.yaml
examples/: ai_workflow.py  cantilever_beam.py  mbb_beam.py  test_jaxfem_topopt.py
knowledge_base/case_template_kb/: cantilever.md  l_shape.md  mbb.md
knowledge_base/failure_kb/: execution.md  optimization.md  physics.md  topology.md
knowledge_base/physics_rule_kb/: default_parameters.md
knowledge_base/solver_api_kb/: python_simp_mma.md
scratch/: test_jax_fem_topopt.py  test_mbb_topopt.py  test_problem.json  verify_engine.py
src/autotopo/: __init__.py  __main__.py  graph.py  llm_factory.py  monitoring.py  research_graph.py  state.py  ui.py
src/autotopo/agents/: __init__.py  coder.py  evaluator.py  executor.py  llm_utils.py  planner.py  reviewer.py  scientist.py  validator.py
src/autotopo/diagnostics/: __init__.py  failure_modes.py  physics_checks.py  repair_rules.py  topology_metrics.py
src/autotopo/engines/: base.py  dolfin_adjoint_engine.py  fea_structured.py  filters.py  jax_fem_engine.py  mma.py  old_engine.py  python_simp_mma_engine.py  solver_runner.py  structured_benchmarks.py
src/autotopo/experiments/: __init__.py  run_minimal_benchmark.py
src/autotopo/nodes/: codegen_agent.py  evaluator.py  input_parser.py  router.py  simulator.py  theory_agent.py
src/autotopo/rag/: __init__.py  corrective_rag.py  kb_loader.py  query_builder.py  reranker.py  retriever.py
src/autotopo/schemas/: __init__.py
tests/: test_casespec_validation.py  test_corrective_rag.py  test_domain_reranker.py  test_engine.py  test_evaluator.py  test_failure_modes.py  test_graph.py  test_hybrid_retriever.py  test_llm_factory.py  test_minimal_benchmark.py  test_monitoring.py  test_parent_child_chunking.py  test_physics_checks.py  test_python_simp_mma_smoke.py  test_research_agents_llm.py  test_router.py  test_schemas.py  test_simulator.py  test_structured_benchmarks.py  test_ui.py
(+5 files in other folders)
