[project]
name = "autotopo"
version = "0.1.0"
description = "自主拓扑优化 AI 智能体工作流"
requires-python = ">=3.10"
dependencies = [
    # LangGraph 工作流
    "langgraph>=0.4",
    "langchain-core>=0.3",
    # LLM Providers — 按需启用
    "langchain-openai>=0.3",           # OpenAI / DeepSeek (OpenAI兼容)
    "langchain-community>=0.3",        # GLM 等社区模型
    # 数据与配置
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # 数值计算
    "numpy>=1.26",
    "scipy>=1.12",
    # 可视化
    "matplotlib>=3.8",
    "Pillow>=10.0",
]

[project.optional-dependencies]
jaxfem = [
    "jax[cpu]>=0.4",
    "jaxlib>=0.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
