[project]
name = "autotopo"
version = "0.2.0"
description = "自主拓扑优化 AI 智能体工作流 (FEniCS + dolfin-adjoint)"
requires-python = ">=3.10"
dependencies = [
    # LangGraph 工作流
    "langgraph>=0.4",
    "langchain-core>=0.3",
    # LLM Providers — 按需启用
    "langchain-openai>=0.3",           # OpenAI / DeepSeek (OpenAI兼容)
    "langchain-community>=0.3",        # GLM 等社区模型
    # 数据与配置
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # 数值计算
    "numpy>=1.26",
    "scipy>=1.12",
    # 可视化
    "matplotlib>=3.8",
    "Pillow>=10.0",
    # 本地监控前端
    "fastapi>=0.111",
    "uvicorn>=0.30",
    # 网格生成与转换
    "gmsh>=4.12",
    "meshio>=5.3",
]

# 注：FEniCS (DOLFIN 2019) + dolfin-adjoint 通过 Docker 容器提供，
# 不在 pip 依赖中声明。容器名: dolfin-adjoint

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
rag = [
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
